Closed
Bug 458100
Opened 17 years ago
Closed 17 years ago
[FIX]Blank iframe if nsPluginDocument gets OnStartRequest before its presshell is created
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
Details
Attachments
(3 files)
|
19.01 KB,
application/x-shockwave-flash
|
Details | |
|
223 bytes,
text/html
|
Details | |
|
6.53 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
See bug 388714 comment 41 through bug 388714 comment 47. Minimal 100% reproducible testcase coming up.
| Assignee | ||
Comment 1•17 years ago
|
||
| Assignee | ||
Comment 2•17 years ago
|
||
OK. So we don't instantiate the plug-in in OnStartRequest because there is no frame, as Evgeny found, and we don't instantiate it once a frame is created because nsObjectLoadingContent::HasNewFrame does nothing inside a plugin document.
| Assignee | ||
Comment 3•17 years ago
|
||
Evgeny, could you verify that this also fixes the blankness issues you were seeing?
Attachment #341328 -
Flags: superreview?(jst)
Attachment #341328 -
Flags: review?(jst)
| Assignee | ||
Updated•17 years ago
|
Summary: Blank iframe if nsPluginDocument gets OnStartRequest before its presshell is created → [FIX]Blank iframe if nsPluginDocument gets OnStartRequest before its presshell is created
Updated•17 years ago
|
QA Contact: content
Updated•17 years ago
|
Attachment #341328 -
Flags: superreview?(jst)
Attachment #341328 -
Flags: superreview+
Attachment #341328 -
Flags: review?(jst)
Attachment #341328 -
Flags: review+
| Assignee | ||
Comment 4•17 years ago
|
||
Pushed changeset 9395c3a493b2.
I'm not sure what the best way to test this is. karlt, would the stuff in bug 386144 be something I could use to write a test for this?
Status: NEW → RESOLVED
Closed: 17 years ago
Depends on: 386144
Flags: in-testsuite?
Resolution: --- → FIXED
Comment 5•17 years ago
|
||
(In reply to comment #4)
> karlt, would the stuff in bug 386144 be something I could use to write
> a test for this?
It would be a step in the right direction at least.
Our reftests capture the output of plugins only when they are windowless.
The windowless plugins in bug 386144 follow the example of the Flash plugin and only become windowless when requested through a parameter.
I assume there is no way to pass such a parameter in this situation, so a test for this bug would need a plugin that is always windowless or maybe (I not sure) a plugin can be created that would choose windowless mode according to information in the src.
| Assignee | ||
Comment 6•16 years ago
|
||
roc, can our current test plugin be used to write a regression test for this bug?
Yes. It defaults to windowless.
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•