Bug 458100.  Make sure that we'll also instantiate the plug-in even if the nsPluginDocument has no presshell yet at OnStartRequest time.  Thanks to Evgeny <evg.salmin@gmail.com> for pointing out the problem.  r+sr=jst